src/main/java/gudu/antlr/TeradataCreateTableParser.java
// Generated from C:/Users/D/IdeaProjects/General-Sql-Parser/src/main/java/gudu/antlr\TeradataCreateTable.g4 by ANTLR 4.9.1

    package gudu.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TeradataCreateTableParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOAT=1, INT4=2, INT2=3, NUM=4, AND=5, OR=6, STAR=7, EACH=8, ADDITION=9, 
		INTERVAL=10, LESS_THAN=11, LESS_THAN_EQUALS=12, EQUALS=13, NOT_EQUALS=14, 
		GREATER_THAN=15, YYYY=16, MM=17, DD=18, GREATER_THAN_EQUALS=19, CREATE=20, 
		SET=21, MULTISET=22, GLOBAL=23, TEMPORARY=24, TABLE=25, VOLATILE=26, CT=27, 
		GENERATED=28, ALWAYS=29, BY_DEFAULT=30, AS=31, DUAL=32, FALLBACK=33, PROTECTION=34, 
		BEFORE=35, JOURNAL=36, AFTER=37, CHECKSUM=38, MERGEBLOCKRATIO=39, IDENTITY=40, 
		NO_MIN_VALUE=41, NO_MAX_VALUE=42, CYCLE=43, START=44, INCREMENT=45, MINVALUE=46, 
		MAXVALUE=47, EXTRACT=48, YEAR=49, MONTH=50, WEEK=51, DAY=52, HOUR=53, 
		COMPRESS=54, MINUTE=55, SECOND=56, TIMEZONE_HOUR=57, TIMEZONE_MINUTE=58, 
		FROM=59, NO_RANGE=60, NO_CASE=61, OR_UNKNOWN=62, UNKNOWN=63, BETWEEN=64, 
		LIKE=65, NO=66, ALL=67, NULL=68, WITH=69, FORMAT=70, VALUES=71, HASH=72, 
		LOAD_ENTITY=73, NOT=74, CHARACTER=75, CASE_SPECIFIC=76, CS=77, PARTITION=78, 
		AMP=79, RANGE_N=80, CASE_N=81, UNIQUE=82, PRIMARY=83, INDEX=84, ORDER=85, 
		BY=86, DOT=87, OPEN_BRACKET=88, CLOSE_BRACKET=89, DEFAULT=90, COMMA=91, 
		UPPERCASE=92, DATABASE_NAME=93, USER_NAME=94, SINGLE_QUOTE=95, JAN=96, 
		FEB=97, MAR=98, APR=99, MAY=100, JUN=101, JUL=102, AUG=103, SEP=104, OCT=105, 
		NOV=106, DEC=107, SEPARATOR=108, NAME=109, COMMENT=110, WS=111, SEMI_COLON=112;
	public static final int
		RULE_parseCreateTable = 0, RULE_createTable = 1, RULE_tableName = 2, RULE_tableOptionList = 3, 
		RULE_tableOption = 4, RULE_fallBackOption = 5, RULE_beforeJournalOption = 6, 
		RULE_afterJournalOption = 7, RULE_checksumOption = 8, RULE_mergeBlockRatioOption = 9, 
		RULE_columnDefinitionList = 10, RULE_columnDefinition = 11, RULE_columnName = 12, 
		RULE_dataType = 13, RULE_columnAttributeList = 14, RULE_columnAttribute = 15, 
		RULE_notNull = 16, RULE_formatDate = 17, RULE_formatType = 18, RULE_caseSpecific = 19, 
		RULE_characterSet = 20, RULE_phraseType = 21, RULE_compress = 22, RULE_identityConstraint = 23, 
		RULE_identityExpression = 24, RULE_startWith = 25, RULE_incrementBy = 26, 
		RULE_minValue = 27, RULE_noMinValue = 28, RULE_noMaxValue = 29, RULE_maxValue = 30, 
		RULE_isCycle = 31, RULE_indexDefinitions = 32, RULE_uniquePrimaryIndex = 33, 
		RULE_noPrimaryIndex = 34, RULE_primaryAmpIndex = 35, RULE_indexName = 36, 
		RULE_indexColumnList = 37, RULE_loading = 38, RULE_ordering = 39, RULE_orderColumnName = 40, 
		RULE_partitionExpressionList = 41, RULE_partitionExpression = 42, RULE_simplePartition = 43, 
		RULE_caseNPartition = 44, RULE_conditionalExpressionList = 45, RULE_conditionalExpression = 46, 
		RULE_tExpression = 47, RULE_operator = 48, RULE_columnExpression = 49, 
		RULE_expressionString = 50, RULE_functionName = 51, RULE_castToken = 52, 
		RULE_rangeNPartition = 53, RULE_rangeList = 54, RULE_nextRangeList = 55, 
		RULE_testExpression = 56, RULE_startExpression = 57, RULE_endExpression = 58, 
		RULE_rangeSize = 59, RULE_stepSize = 60, RULE_stepType = 61, RULE_arithmeticPartition = 62, 
		RULE_functionPartition = 63, RULE_extractFunction = 64, RULE_extractToken = 65, 
		RULE_date = 66, RULE_month = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"parseCreateTable", "createTable", "tableName", "tableOptionList", "tableOption", 
			"fallBackOption", "beforeJournalOption", "afterJournalOption", "checksumOption", 
			"mergeBlockRatioOption", "columnDefinitionList", "columnDefinition", 
			"columnName", "dataType", "columnAttributeList", "columnAttribute", "notNull", 
			"formatDate", "formatType", "caseSpecific", "characterSet", "phraseType", 
			"compress", "identityConstraint", "identityExpression", "startWith", 
			"incrementBy", "minValue", "noMinValue", "noMaxValue", "maxValue", "isCycle", 
			"indexDefinitions", "uniquePrimaryIndex", "noPrimaryIndex", "primaryAmpIndex", 
			"indexName", "indexColumnList", "loading", "ordering", "orderColumnName", 
			"partitionExpressionList", "partitionExpression", "simplePartition", 
			"caseNPartition", "conditionalExpressionList", "conditionalExpression", 
			"tExpression", "operator", "columnExpression", "expressionString", "functionName", 
			"castToken", "rangeNPartition", "rangeList", "nextRangeList", "testExpression", 
			"startExpression", "endExpression", "rangeSize", "stepSize", "stepType", 
			"arithmeticPartition", "functionPartition", "extractFunction", "extractToken", 
			"date", "month"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'*'", null, "'+'", null, "'<'", 
			"'<='", "'='", "'<>'", "'>'", null, null, null, "'>='", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'.'", "'('", "')'", null, "','", null, null, 
			null, "'''", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FLOAT", "INT4", "INT2", "NUM", "AND", "OR", "STAR", "EACH", "ADDITION", 
			"INTERVAL", "LESS_THAN", "LESS_THAN_EQUALS", "EQUALS", "NOT_EQUALS", 
			"GREATER_THAN", "YYYY", "MM", "DD", "GREATER_THAN_EQUALS", "CREATE", 
			"SET", "MULTISET", "GLOBAL", "TEMPORARY", "TABLE", "VOLATILE", "CT", 
			"GENERATED", "ALWAYS", "BY_DEFAULT", "AS", "DUAL", "FALLBACK", "PROTECTION", 
			"BEFORE", "JOURNAL", "AFTER", "CHECKSUM", "MERGEBLOCKRATIO", "IDENTITY", 
			"NO_MIN_VALUE", "NO_MAX_VALUE", "CYCLE", "START", "INCREMENT", "MINVALUE", 
			"MAXVALUE", "EXTRACT", "YEAR", "MONTH", "WEEK", "DAY", "HOUR", "COMPRESS", 
			"MINUTE", "SECOND", "TIMEZONE_HOUR", "TIMEZONE_MINUTE", "FROM", "NO_RANGE", 
			"NO_CASE", "OR_UNKNOWN", "UNKNOWN", "BETWEEN", "LIKE", "NO", "ALL", "NULL", 
			"WITH", "FORMAT", "VALUES", "HASH", "LOAD_ENTITY", "NOT", "CHARACTER", 
			"CASE_SPECIFIC", "CS", "PARTITION", "AMP", "RANGE_N", "CASE_N", "UNIQUE", 
			"PRIMARY", "INDEX", "ORDER", "BY", "DOT", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"DEFAULT", "COMMA", "UPPERCASE", "DATABASE_NAME", "USER_NAME", "SINGLE_QUOTE", 
			"JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", 
			"NOV", "DEC", "SEPARATOR", "NAME", "COMMENT", "WS", "SEMI_COLON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TeradataCreateTable.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TeradataCreateTableParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseCreateTableContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TeradataCreateTableParser.EOF, 0); }
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(TeradataCreateTableParser.SEMI_COLON, 0); }
		public ParseCreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseCreateTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).enterParseCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).exitParseCreateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TeradataCreateTableVisitor ) return ((TeradataCreateTableVisitor<? extends T>)visitor).visitParseCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseCreateTableContext parseCreateTable() throws RecognitionException {
		ParseCreateTableContext _localctx = new ParseCreateTableContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseCreateTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			createTable();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI_COLON) {
				{
				setState(137);
				match(SEMI_COLON);
				}
			}

			}
			setState(140);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public ColumnDefinitionListContext columnDefinitionList() {
			return getRuleContext(ColumnDefinitionListContext.class,0);
		}
		public IndexDefinitionsContext indexDefinitions() {
			return getRuleContext(IndexDefinitionsContext.class,0);
		}
		public TerminalNode CREATE() { return getToken(TeradataCreateTableParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(TeradataCreateTableParser.TABLE, 0); }
		public TerminalNode CT() { return getToken(TeradataCreateTableParser.CT, 0); }
		public TerminalNode COMMA() { return getToken(TeradataCreateTableParser.COMMA, 0); }
		public TableOptionListContext tableOptionList() {
			return getRuleContext(TableOptionListContext.class,0);
		}
		public TerminalNode DATABASE_NAME() { return getToken(TeradataCreateTableParser.DATABASE_NAME, 0); }
		public TerminalNode USER_NAME() { return getToken(TeradataCreateTableParser.USER_NAME, 0); }
		public TerminalNode GLOBAL() { return getToken(TeradataCreateTableParser.GLOBAL, 0); }
		public TerminalNode TEMPORARY() { return getToken(TeradataCreateTableParser.TEMPORARY, 0); }
		public TerminalNode VOLATILE() { return getToken(TeradataCreateTableParser.VOLATILE, 0); }
		public TerminalNode SET() { return getToken(TeradataCreateTableParser.SET, 0); }
		public TerminalNode MULTISET() { return getToken(TeradataCreateTableParser.MULTISET, 0); }
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).enterCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).exitCreateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TeradataCreateTableVisitor ) return ((TeradataCreateTableVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				{
				setState(142);
				match(CREATE);
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SET || _la==MULTISET) {
					{
					setState(143);
					_la = _input.LA(1);
					if ( !(_la==SET || _la==MULTISET) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(149);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case GLOBAL:
					{
					setState(146);
					match(GLOBAL);
					setState(147);
					match(TEMPORARY);
					}
					break;
				case VOLATILE:
					{
					setState(148);
					match(VOLATILE);
					}
					break;
				case TABLE:
					break;
				default:
					break;
				}
				setState(151);
				match(TABLE);
				}
				break;
			case CT:
				{
				setState(152);
				match(CT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATABASE_NAME || _la==USER_NAME) {
				{
				setState(155);
				_la = _input.LA(1);
				if ( !(_la==DATABASE_NAME || _la==USER_NAME) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(158);
			tableName();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(159);
				match(COMMA);
				setState(160);
				tableOptionList();
				}
			}

			setState(163);
			columnDefinitionList();
			setState(164);
			indexDefinitions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(TeradataCreateTableParser.NAME, 0); }
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).enterTableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).exitTableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TeradataCreateTableVisitor ) return ((TeradataCreateTableVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableOptionListContext extends ParserRuleContext {
		public List<TableOptionContext> tableOption() {
			return getRuleContexts(TableOptionContext.class);
		}
		public TableOptionContext tableOption(int i) {
			return getRuleContext(TableOptionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TeradataCreateTableParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TeradataCreateTableParser.COMMA, i);
		}
		public TableOptionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableOptionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).enterTableOptionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).exitTableOptionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TeradataCreateTableVisitor ) return ((TeradataCreateTableVisitor<? extends T>)visitor).visitTableOptionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableOptionListContext tableOptionList() throws RecognitionException {
		TableOptionListContext _localctx = new TableOptionListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tableOptionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			tableOption();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(169);
				match(COMMA);
				setState(170);
				tableOption();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableOptionContext extends ParserRuleContext {
		public FallBackOptionContext fallBackOption() {
			return getRuleContext(FallBackOptionContext.class,0);
		}
		public BeforeJournalOptionContext beforeJournalOption() {
			return getRuleContext(BeforeJournalOptionContext.class,0);
		}
		public AfterJournalOptionContext afterJournalOption() {
			return getRuleContext(AfterJournalOptionContext.class,0);
		}
		public ChecksumOptionContext checksumOption() {
			return getRuleContext(ChecksumOptionContext.class,0);
		}
		public MergeBlockRatioOptionContext mergeBlockRatioOption() {
			return getRuleContext(MergeBlockRatioOptionContext.class,0);
		}
		public TableOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).enterTableOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TeradataCreateTableListener ) ((TeradataCreateTableListener)listener).exitTableOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TeradataCreateTableVisitor ) return ((TeradataCreateTableVisitor<? extends T>)visitor).visitTableOption(this);
			else return visitor.visitChildren(this);
		}
	}
